--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <div class="wrapper">
             <div class="img-area">
                 <div class="inner-area">
-                    <img
-                        class="image__item"
-                        src="./images/avatar.png"
-                        alt=""
-                    />
+                    <img class="image__item" src="./images/avatar.png" alt="" />
                 </div>
             </div>
             <div class="icon phone"><i class="fas fa-phone-alt"></i></div>
@@ -26,21 +22,17 @@
             <span class="name">Nguyễn Văn Cường</span>
             <span class="about">Developer & Designer</span>
             <div class="social-icons">
-                <a
-                    href="https://www.facebook.com/profile.php?id=100038687656028"
-                    class="fb"
+                <a href="https://www.facebook.com/" class="fb"
                     ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a href="https://www.tiktok.com/@cuongcoca050102" class="tiktok"
-                    ><i class="fab fa-tiktok"></i
+                <a href="https://zalo.me/0965469714" class="zalo"
+                    ><i class="fas fa-phone-alt"></i
                 ></a>
-                <a
-                    href="https://www.instagram.com/cuongcoca17?igsh=bGI5MWVxd29taG0w&utm_source=qr"
-                    class="insta"
-                    ><i class="fab fa-instagram"></i
+                <a href="https://www.linkedin.com/" class="linkedin"
+                    ><i class="fa-brands fa-linkedin-in"></i
                 ></a>
-                <a href="mailto:cuongcoca12345@gmail.com" class="yt">
-                    <i class="fa-regular fa-envelope"></i>
+                <a href="mailto:cuongdev2002@gmail.com" class="email">
+                    <i class="fa-solid fa-envelope"></i>
                 </a>
             </div>
             <div class="buttons">
